@@ -1,4 +1,4 @@
-// bar.c [ 0.7.5 ]
+// bar.c [ 0.7.6 ]
 
 static void draw_numopen(unsigned int cd, unsigned int gc);
 static Drawable area_sb;
